--- a/roles/webapp/tests/test.yml
+++ b/roles/webapp/tests/test.yml
@@ -1,5 +1,6 @@
 ---
 - hosts: localhost
-  remote_user: root
+  connection: local
+  become: true
   roles:
-    - webapp
+    - /root/udemy_ansible_webapp_role/roles/webapp
